# Timor-Leste-Development-Intelligence

./: .gitignore  README.md  dashboard.py  pyproject.toml  requirements.txt
outputs/processed/: chunks.jsonl  manifest.json  pages.jsonl  sections.json  tables.json
outputs/results/: chapter_summaries.json  evaluations.json  indicators.json  indicators_raw_llm.json  model_call_log.jsonl  model_call_log_comparison.jsonl  model_comparison.json  report_findings.json  report_findings_raw_llm.json  run_manifest.json  section_digests.json  smoke_test.json  strengths_challenges.json  strengths_challenges_raw_llm.json  theme_classification.jsonl  theme_keyword_baseline.jsonl  theme_keyword_totals.json  theme_llm_totals.json  time_series.json  time_series_raw_llm.json
src/development_intelligence/: __init__.py  analysis.py  cli.py  config.py  io_utils.py  ollama_client.py  pdf_processing.py  pipeline.py  prompts.py  retrieval.py  schemas.py
tests/: test_analysis.py  test_pdf_processing.py  test_retrieval_and_json.py
