[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "timor-leste-development-intelligence"
version = "0.1.0"
description = "Local-LLM development intelligence pipeline for the Timor-Leste NHDR 2018"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "pdfplumber>=0.11",
  "plotly>=5.20",
  "pypdf>=5.0",
  "streamlit>=1.35",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
development-intelligence = "development_intelligence.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

